--- a/public/css/socketchatstyles.css
+++ b/public/css/socketchatstyles.css
@@ -31,29 +31,31 @@
 }
 
 .login-dark {
-  height:1000px;
+  height:100vh;
   background:#475d62 url(/img/river.png);
   background-size:cover;
   position:relative;
 }
 
 .login-dark-chat {
-  height:1000px;
+  height: 100vh;
   background:#475d62 url(/img/river.png);
   background-size:cover;
   position:relative;
 }
 
 .chatcontainer{
+  position: relative;
   width:100%;
   padding: 10px;
   background: #332e2e;
   color: white;
   border-radius:5px;
+  height: 79vh;
 }
 
 .messages{
-  height:800px;
+  height: 100%;
   overflow-y:auto;
 }
 
@@ -62,4 +64,7 @@
   overflow-y:auto;
 }
 
-
+#message-form {
+    position: relative;
+    bottom: 34px;
+}
